Added VS Solution files

--- a/Default.Master
+++ b/Default.Master
@@ -46,5 +46,8 @@
         </footer>
 
     </form>
+
+    <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-1.1.0.min.js"></script>
+    <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </body>
 </html>
